<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AltaUsuarioActivity">

    <TextView
        android:id="@+id/textTituloAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ALTA USUARIO"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Introduzca el nombre:"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/calculator_screen"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/calculator_screen_background"
        android:clickable="false"
        android:focusable="false"
        android:gravity="end"
        android:maxLength="10"
        android:padding="2dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="40sp"
        android:typeface="monospace" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Fila 1 -->
        <Button
            android:id="@+id/numero7"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:text="@string/numero7"
            android:visibility="visible" />

        <Button
            android:id="@+id/numero8"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:text="@string/numero8" />

        <Button
            android:id="@+id/numero9"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:text="@string/numero9" />

        <!-- Fila 2 -->
        <Button
            android:id="@+id/numero4"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:text="@string/numero4" />

        <Button
            android:id="@+id/numero5"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:text="@string/numero5" />

        <Button
            android:id="@+id/numero6"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:text="@string/numero6" />

        <!-- Fila 3 -->

        <Button
            android:id="@+id/numero1"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:text="@string/numero1" />

        <Button
            android:id="@+id/numero2"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:text="@string/numero2" />

        <Button
            android:id="@+id/numero3"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:text="@string/numero3" />

        <!-- Fila 4 -->
        <Button
            android:id="@+id/borrarNumero"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            app:icon="@android:drawable/ic_input_delete"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="25dp" />

        <Button
            android:id="@+id/numero0"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:text="@string/numero0" />

        <Button
            android:id="@+id/reiniciar"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_margin="5dp"
            app:icon="@android:drawable/ic_popup_sync"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="25dp" />

        <!-- Fila 5 -->

        <Button
            android:id="@+id/avanzar"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_margin="5dp"
            android:text="Enviar" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="2"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </GridLayout>
</LinearLayout>